# chau-2024-exact

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
paper/: README.md  calc_pmax.py  contourplot.py  contourplot_ori.py  contourplot_space.py  estimator.py  fit_chettih.py  fit_kernel.py  fit_rossi_ori.py  get_product.py  kappa_gain.py  lineplot.py  mean_response_gain.py  mpl_config.py  plot_gain.py  plot_znamenskiy.py  process_chettih.py  process_oldenburg_data.py  process_rossi.py  process_rossi_raw.py  process_znamenskiy.py  response.py  rho.txt  test_data.csv  uncertainty.py  uncertainty_rho.py
paper/chettih_data/: bias.csv  data.csv  orientation.csv  r0_samples.csv  rmin_samples.csv
paper/model_fits/: README.md  fit.toml  run.toml  run10.toml  run11.toml  run12.toml  run13.toml  run14.toml  run15.toml  run16.toml  run3.toml  run4.toml  run5.toml  run8.toml  run9.toml  weights.toml  weights3.toml  weights9.toml  weights_space.toml
paper/product_data/: EI.csv  IE.csv
paper/rossi_data/: EE.csv  EI.csv  fig1l_rEX.csv  fig1l_rIN.csv  fig1l_rbins.csv  fig2h.csv
paper/znamenskiy_data/: EI.csv  EPSP.csv  IE.csv  IPSP.csv
src/niarb/: cell_type.py  dataset.py  integrate.py  io.py  linalg.py  neurons.py  numerics.py  perturbation.py  utils.py  viz.py  weights.py  zero_crossing.py
test/: test_dataset.py  test_numerics.py  test_perturbation.py  test_utils.py  test_viz.py  test_weights.py  test_zero_crossing.py
test/test_special/: test_core.py  test_resolvent.py
test/test_tensors/: test_categorical.py
(+501 files in other folders)
