[build-system]
# editable install using setuptool available since v64.0.0
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "niarb"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ho Yin Chau" }]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "seaborn",
    "matplotlib",
    "torch >= 2.4.0",
    "torchdiffeq",
    "hyclib >= 0.1.40",
    "tdfl >= 0.1.15",
    "tqdm",
    "ricciardi >= 0.1.4",
]

[project.scripts]
niarb = "niarb.main:main"

[tool.pytest.ini_options]
env = [
    "PYTORCH_ENABLE_MPS_FALLBACK=1", # due to torch.bucketize currently not supporting MPS (as of torch 2.0.1)
]
